--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,3 +11,4 @@ jobs:
           path: artifacts
       - store_artifacts:
           path: artifacts/junit
+      - run: bash <(curl -s https://codecov.io/bash) 
