--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,8 @@ orbs:
 jobs:
   build:
     machine:
-      image: ubuntu-1604:201903-01
+      resource_class: gpu.nvidia.small
+      image: ubuntu-1604-cuda-10.1:201909-23
     steps:
       - checkout
       - matlab/install
