--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,3 +40,8 @@ jobs:
         with:
           name: artifacts
           path: artifacts/   
+          
+      - name: XUnit Viewer
+        uses: AutoModality/action-xunit-viewer@v1.0.1
+        with:
+          results: artifacts/testResults.xml
