--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
           target_branch: gh-pages
           build_dir: public
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}:  
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
           
 #      - name: XUnit Viewer
  #       uses: AutoModality/action-xunit-viewer@v1.0.1
