--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,6 +46,7 @@ jobs:
         with:
           target_branch: gh-pages
           build_dir: public
+          keep_history: true 
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
           
