--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,15 +40,13 @@ jobs:
           name: artifacts
           path: artifacts/   
           
-      - name: Deploy to GitHub Pages
-        if: success()
-        uses: crazy-max/ghaction-github-pages@v2
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@3.7.1
         with:
-          target_branch: gh-pages
-          build_dir: public
-          keep_history: true 
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BRANCH: gh-pages # The branch the action should deploy to.
+          FOLDER: public # The folder the action should deploy.
+          CLEAN: true # 
           
 #      - name: XUnit Viewer
  #       uses: AutoModality/action-xunit-viewer@v1.0.1
