--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,14 +39,29 @@ jobs:
         with:
           name: artifacts
           path: artifacts/   
-          
-      - name: Deploy 🚀
+
+      - name: Create public index
+        run: |
+          echo "<!DOCTYPE html>" >> public/index.html
+          echo "<html>" >> public/index.html" >> public/index.html
+          echo "  <head>" >> public/index.html
+          echo "    <title>Job Results</title>" >> public/index.html
+          echo "  </head>" >> public/index.html
+          echo "  <body>" >> public/index.html
+          echo "    <a href="test-results/index.html">Test Results</a>" >> public/index.html
+          echo "    <a href="code-coverage/index.html">Code Coverage</a>" >> public/index.html
+          echo "  </body>" >> public/index.html
+          echo "</html>" >> public/index.html
+        
+      - name: Publish Results 🚀
         uses: JamesIves/github-pages-deploy-action@3.7.1
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH: gh-pages # The branch the action should deploy to.
           FOLDER: public # The folder the action should deploy.
           CLEAN: true # 
+      
+ 
           
 #      - name: XUnit Viewer
  #       uses: AutoModality/action-xunit-viewer@v1.0.1
