Fix benchmark output location

--- a/.github/workflows/performance.yml
+++ b/.github/workflows/performance.yml
@@ -45,10 +45,7 @@ jobs:
         with:
           # What benchmark tool the output.txt came from
           tool: 'googlecpp'
-          # Where the output from the benchmark tool is stored
-          output-file-path: output/benchmark_result.json
-          # Where the previous data file is stored
+          output-file-path: benchmark_data.json
           external-data-json-path: ./cache/benchmark-data.json
-          # Workflow will fail when an alert happens
           fail-on-alert: true
       # Upload the updated cache file for the next job by actions/cache
