--- a/.github/workflows/performance.yml
+++ b/.github/workflows/performance.yml
@@ -29,7 +29,7 @@ jobs:
         uses: matlab-actions/setup-matlab@v0
 
       # Runs a set of commands using the runners shell
-      - name: Run all tests
+      - name: Run performance tests
         uses: matlab-actions/run-command@v0
         with:
           command: runPerfTests
@@ -45,7 +45,7 @@ jobs:
         with:
           # What benchmark tool the output.txt came from
           tool: 'googlecpp'
-          output-file-path: benchmark_data.json
+          output-file-path: benchmark-data.json
           external-data-json-path: ./cache/benchmark-data.json
           fail-on-alert: true
       # Upload the updated cache file for the next job by actions/cache
