--- a/.github/workflows/performance.yml
+++ b/.github/workflows/performance.yml
@@ -46,7 +46,7 @@ jobs:
           # What benchmark tool the output.txt came from
           tool: 'googlecpp'
           output-file-path: benchmark-data.json
-          external-data-json-path: ./cache/benchmark-data.json
+          #external-data-json-path: ./cache/benchmark-data.json
           fail-on-alert: true
           github-token: ${{ secrets.GITHUB_TOKEN }}
           auto-push: true
