--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  validate:
+  validate-code:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -59,7 +59,8 @@ jobs:
           FOLDER: public # The folder the action should deploy.
           CLEAN: true # 
           CLEAN_EXCLUDE: '["dev"]'
-  assess:
+  assess-performance:
+    needs: validate-code
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
