--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,26 +15,11 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  validate-code:
-    # The type of runner that the job will run on
+  
+  reporting-scaffolding:
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
-      
-      - name: Setup MATLAB
-        uses: matlab-actions/setup-matlab@v0
-
-      # Runs a set of commands using the runners shell
-      - name: Run all tests
-        uses: matlab-actions/run-command@v0
-        with:
-          command: runAllTests
-           
-
       - name: Create public index
         if: ${{ always() }}
         run: |
@@ -54,7 +39,24 @@ jobs:
         if: ${{ always() }}
         run: |
           echo 'RewriteEngine On' >> public/.htaccess
-          echo 'RewriteRule ^(.*)index([\.html]*)$ /$1 [R=302,L] >> public/.htaccess
+          echo 'RewriteRule ^(.*)index([\.html]*)$ /$1 [R=302,L]' >> public/.htaccess
+  validate-code:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+    needs: reporting-scaffolding
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+      
+      - name: Setup MATLAB
+        uses: matlab-actions/setup-matlab@v0
+
+      # Runs a set of commands using the runners shell
+      - name: Run all tests
+        uses: matlab-actions/run-command@v0
+        with:
+          command: runAllTests
         
       - name: Publish Results 🚀
         if: ${{ always() }}
@@ -67,6 +69,7 @@ jobs:
           CLEAN_EXCLUDE: '["dev"]'
   assess-performance:
     runs-on: ubuntu-latest
+    needs: reporting-scaffolding
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
