--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,37 +15,10 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  
-  reporting-scaffolding:
-    runs-on: ubuntu-latest
-    
-    
-    steps:
-      - name: Create public area
-        run:  mkdir public
-        
-     # - name: Create public index
-      #  run: |
-       #   echo '<!DOCTYPE html>' >> public/index.html
-        #  echo '<html>' >> public/index.html
-         # echo '  <head>' >> public/index.html
-          #echo '    <title>Job Results</title>' >> public/index.html
-#          echo '  </head>' >> public/index.html
- #         echo '  <body>' >> public/index.html
-  #        echo '    <p><a href="test-results/index.html">Test Results</a></p>' >> public/index.html
-   #       echo '    <p><a href="code-coverage/index.html">Code Coverage</a></p>' >> public/index.html
-    #      echo '    <p><a href="dev/bench/index.html">Performance Results</a></p>' >> public/index.html
-     #     echo '  </body>' >> public/index.html
-      #    echo '</html>' >> public/index.html
           
-      - name: Create ht access file
-        run: |
-          echo 'RewriteEngine On' >> public/.htaccess
-          echo 'RewriteRule ^(.*)index([\.html]*)$ /$1 [R=302,L]' >> public/.htaccess
   validate-code:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    needs: reporting-scaffolding
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
@@ -60,18 +33,8 @@ jobs:
         with:
           command: runAllTests
         
-      - name: Publish Results 🚀
-        if: ${{ always() }}
-        uses: JamesIves/github-pages-deploy-action@3.7.1
-        with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH: gh-pages # The branch the action should deploy to.
-          FOLDER: public # The folder the action should deploy.
-          CLEAN: true # 
-          CLEAN_EXCLUDE: '["dev"]'
   assess-performance:
     runs-on: ubuntu-latest
-    needs: reporting-scaffolding
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -114,6 +77,35 @@ jobs:
           auto-push: true
           comment-on-alert: true
           alert-comment-cc-users: '@acampbel'
-
+  
+  build-results-site:
+    runs-on: ubuntu-latest
+    needs: [assess-performance,  validate-code]
+    steps:
+      - name: Create public Index
+        run: tree -H 'public' -L 1 --noreport --charset utf-8 > public/index.html
+        
+      - name: Publish Results 🚀
+        if: ${{ always() }}
+        uses: JamesIves/github-pages-deploy-action@3.7.1
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BRANCH: gh-pages # The branch the action should deploy to.
+          FOLDER: public # The folder the action should deploy.
+          CLEAN: true # 
+          CLEAN_EXCLUDE: '["dev"]'
+     # - name: Create public index
+      #  run: |
+       #   echo '<!DOCTYPE html>' >> public/index.html
+        #  echo '<html>' >> public/index.html
+         # echo '  <head>' >> public/index.html
+          #echo '    <title>Job Results</title>' >> public/index.html
+#          echo '  </head>' >> public/index.html
+ #         echo '  <body>' >> public/index.html
+  #        echo '    <p><a href="test-results/index.html">Test Results</a></p>' >> public/index.html
+   #       echo '    <p><a href="code-coverage/index.html">Code Coverage</a></p>' >> public/index.html
+    #      echo '    <p><a href="dev/bench/index.html">Performance Results</a></p>' >> public/index.html
+     #     echo '  </body>' >> public/index.html
+      #    echo '</html>' >> public/index.html
  
           
