--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,32 @@ jobs:
         uses: matlab-actions/run-command@v0
         with:
           command: runAllTests
+                  
+      - name: Create public Index
+        run: cd public ; tree -H '.' -L 1 --noreport --charset utf-8 > index.html ; cd ..
         
+      - name: Publish Results 🚀
+        if: ${{ always() }}
+        uses: JamesIves/github-pages-deploy-action@3.7.1
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BRANCH: gh-pages # The branch the action should deploy to.
+          FOLDER: public # The folder the action should deploy.
+          CLEAN: true # 
+          CLEAN_EXCLUDE: '["dev"]'
+     # - name: Create public index
+      #  run: |
+       #   echo '<!DOCTYPE html>' >> public/index.html
+        #  echo '<html>' >> public/index.html
+         # echo '  <head>' >> public/index.html
+          #echo '    <title>Job Results</title>' >> public/index.html
+#          echo '  </head>' >> public/index.html
+ #         echo '  <body>' >> public/index.html
+  #        echo '    <p><a href="test-results/index.html">Test Results</a></p>' >> public/index.html
+   #       echo '    <p><a href="code-coverage/index.html">Code Coverage</a></p>' >> public/index.html
+    #      echo '    <p><a href="dev/bench/index.html">Performance Results</a></p>' >> public/index.html
+     #     echo '  </body>' >> public/index.html
+      #    echo '</html>' >> public/index.html
   assess-performance:
     runs-on: ubuntu-latest
 
@@ -78,34 +103,10 @@ jobs:
           comment-on-alert: true
           alert-comment-cc-users: '@acampbel'
   
-  build-results-site:
-    runs-on: ubuntu-latest
-    needs: [assess-performance,  validate-code]
-    steps:
-      - name: Create public Index
-        run: tree -H 'public' -L 1 --noreport --charset utf-8 > public/index.html
-        
-      - name: Publish Results 🚀
-        if: ${{ always() }}
-        uses: JamesIves/github-pages-deploy-action@3.7.1
-        with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH: gh-pages # The branch the action should deploy to.
-          FOLDER: public # The folder the action should deploy.
-          CLEAN: true # 
-          CLEAN_EXCLUDE: '["dev"]'
-     # - name: Create public index
-      #  run: |
-       #   echo '<!DOCTYPE html>' >> public/index.html
-        #  echo '<html>' >> public/index.html
-         # echo '  <head>' >> public/index.html
-          #echo '    <title>Job Results</title>' >> public/index.html
-#          echo '  </head>' >> public/index.html
- #         echo '  <body>' >> public/index.html
-  #        echo '    <p><a href="test-results/index.html">Test Results</a></p>' >> public/index.html
-   #       echo '    <p><a href="code-coverage/index.html">Code Coverage</a></p>' >> public/index.html
-    #      echo '    <p><a href="dev/bench/index.html">Performance Results</a></p>' >> public/index.html
-     #     echo '  </body>' >> public/index.html
-      #    echo '</html>' >> public/index.html
+  #build-results-site:
+  #  runs-on: ubuntu-latest
+ #   needs: [assess-performance,  validate-code]
+#    steps:
+
  
           
