--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -118,16 +118,10 @@ jobs:
         run: tree -d -L 1 -H '.' --noreport --charset utf-8 > index.html
     
       - name: Create the benchmarking index
-        run: |
-          cd dev
-          tree -d -L 1 -H '.' --noreport --charset utf-8 > index.html
-          cd .. 
+        run: cd dev ; tree -d -L 1 -H '.' --noreport --charset utf-8 > index.html
         
       - name: Create jobs index
         run: cd jobs ; tree -d -L 1 -H '.' --noreport --charset utf-8 > index.html
-
-      - name: debug
-        run: ls ; echo $GITHUB_RUN_ID
         
       - name: Create this jobs index
         run: cd jobs/$GITHUB_RUN_ID ; tree -d -L 1-H '.' --noreport --charset utf-8 > index.html
