--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -133,8 +133,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH: gh-pages # The branch the action should deploy to.
           FOLDER: . # The folder the action should deploy.
-          CLEAN: false # 
-          CLEAN_EXCLUDE: '["dev"]'
+          CLEAN: true # 
+          CLEAN_EXCLUDE: '["dev", "jobs"]'
         
 
  
