--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -115,16 +115,16 @@ jobs:
         run: tree
         
       - name: Create top level index
-        run:  rm -f index.html ; tree -d -L 1 -H '.' --noreport --charset utf-8 > index.html
+        run:  rm -f index.html ; tree -d -L 1 -H '.' -T 'Job Results' --noreport --charset utf-8 > index.html
     
       - name: Create the benchmarking index
-        run: cd dev ;  rm -f index.html ; tree -d -L 1 -H '.' --noreport --charset utf-8 > index.html
+        run: cd dev ;  rm -f index.html ; tree -d -L 1 -H '.' -T Benchmarks --noreport --charset utf-8 > index.html
         
       - name: Create jobs index
-        run: cd jobs ;  rm -f index.html ; tree -d -L 1 -H '.' --noreport --charset utf-8 > index.html
+        run: cd jobs ;  rm -f index.html ; tree -d -L 1 -H '.' -T Jobs --noreport --charset utf-8 > index.html
         
       - name: Create this jobs index
-        run: cd jobs/$GITHUB_RUN_ID ; rm -f index.html ; tree -d -L 1 -H '.' --noreport --charset utf-8 > index.html
+        run: cd jobs/$GITHUB_RUN_ID ; rm -f index.html ; tree -d -L 1 -H '.' -T 'Job $GITHUB_RUN_ID'  --noreport --charset utf-8 > index.html
 
 
       - name: Publish to pages
